fixes #7229 updated a11y style for dojoxGridRowSelected to use solid border to focus and row selection are visible in high contrast mode.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@16938 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/Grid.css
+++ b/grid/resources/Grid.css
@@ -269,7 +269,7 @@
 }
 
 .dijit_a11y .dojoxGridRowSelected {
-	border-bottom: 1px dashed black;
+	border: 1px solid black !important;
 }
 
 /* Drag and Drop */
